p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    # les regles pour app1
    - host: app1.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-service
              port:
                number: 80
    # regle pour app2
    - host: app2.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80
    # regle par default pour app3
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app3-service
              port:
                number: 80
